src/ng-weekly-scheduler.less
@headerRowHeight: 15px;
@offset: 5px;
@rowHeight: 28px;

@backgroundColor: #fff;
@darkBackgroundColor: #1c1c1c;

@borderColor: #ddd;
@darkBorderColor: #777;

@borderStyle: solid;
@borderWidth: 1px;

@stripeColor: #f6f6f6;
@darkStripeColor: #333;

@border: @borderWidth @borderStyle @borderColor;
@darkBorder: @borderWidth @borderStyle @darkBorderColor;

@red: rgb(200, 25, 25);

.applyTheme(@backgroundColor, @borderColor, @stripeColor, @textColor) {
  @border: @borderWidth @borderStyle @borderColor;

  background: @backgroundColor;
  border-left: @border;
  border-right: @border;
  border-top: @border;
  color: @textColor;

  br-multi-slider {
    .slot {
      &.active {
        box-shadow: 0px 0px 2px 2px @textColor;
      }

      &.nullEnd {
        background: linear-gradient(to right, currentColor, fade(@backgroundColor, 50%));
      }

      span {
        color: #fff;
        display: block;
        overflow: hidden;
        text-overflow: ellipsis;
      }
    }
  }

  .labels {
    border-right: @border;
  }

  .striped > div:nth-child(even) {
    background-color: @stripeColor;
  }
  
  .srow {
    border-bottom: @border;
  }

  .timestamps {
    div {
      border-width: 2px;

      &:hover {
        background-color: @stripeColor;
      }
    }
  }
}

br-weekly-scheduler {
  .applyTheme(@backgroundColor, @borderColor, @stripeColor, @darkBackgroundColor);
  display: block;
  margin-bottom: 10px;
  
  .buttons {
    div {
      display: inline-block;
    }
  }

  /* The dark class will be applied by a client on the outside of this component */
  .dark & {
    .applyTheme(@darkBackgroundColor, @darkBorderColor, @darkStripeColor, @backgroundColor);
  }

  .flex-column {
    flex-direction: column;
  }

  .flex-row {
    flex-direction: row;
  }

  .fullWidth {
    width: 100%;
  }

  .labels {
    display: block;
    float: left;
    text-align: center;
    
    .dummy {
      height: @headerRowHeight;
    }

    .srow {
      padding: 0 5px;
    }
  }
  
  br-schedule-area-container {
    display: block;
    overflow-x: auto;

    /** Practical effect of "start zoomed if the screen is below this width" */
    .schedule-area {
      min-width: 600px;
    }

    .vertical-multi-slider-area {
      position: relative;
    
      .calendar-overlay {
        position: absolute;
        width: 100%;
        height: 100%;
        z-index: 1;
    
        .calendar {
          height: 100%;
        }
      }
    }
  }

  .srow {
    position: relative;
    height: @rowHeight;
    line-height: @rowHeight;

    &.buttons {
      height: auto;
    }

    &.explanations {
      padding-left: @offset;

      &.violation {
        color: red;
      }
    }
  }

  .calendar {
    display: table;
    table-layout: fixed;
    position: relative;
    width: 100%;
  }

  .timestamps {
    display: table;
    font-size: 0.6em;
    font-weight: bold;
    line-height: @headerRowHeight;
    height: @headerRowHeight;
    table-layout: fixed;
    text-transform: uppercase;
    width: 100%;

    div {
      overflow: hidden;
      padding-left: 2px;
      text-overflow: clip;

      &:hover {
        cursor: pointer;
      }
    }
  }
}

br-hour-grid,
br-hourly-grid,
br-day-grid,
br-daily-grid {
  div {
    box-sizing: border-box;
    display: table-cell;
  }
  
  .interval {
    display: block;
    float: left;
  }
}

br-hour-grid, 
br-hourly-grid,
br-day-grid {
  display: table-row;
}

br-hour-grid,
br-hourly-grid {
  div {
    height: 100%;
  }
}

br-day-grid,
br-daily-grid {
  div {
    width: 100%;
  }
}

br-daily-grid {
  display: block;
  width: 100%;
  height: 100%;

  .grid-item {
    display: block;
    height: @rowHeight + @borderWidth;
  }
}

br-multi-slider {
  @topOffset: @offset;
  @bottomOffset: @offset;
  
  cursor: crosshair;
  height: 100%;
  top: 0;
  position: absolute;
  width: 100%;

  .ghost-wrapper {
    width: 100%;
    height: 100%;
  }
  
  .slot {
    @lineHeight: @rowHeight - @topOffset - @bottomOffset;
    
    font-family: monospace;
    font-size: x-small;
    position: absolute;
    top: @topOffset;
    bottom: @bottomOffset;
    border-radius: 3px;
    text-align: center;
    white-space: nowrap;
    line-height: @lineHeight;

    &.nullEnd {
      text-align: left;
    }

    .slotWrapper {
      display: flex;
      height: 100%;

      .middle {
        cursor: all-scroll;
        display: inline-block;
        overflow: hidden;
        padding: 0 4px;
      }
    }
  }

  br-ghost-slot {
    @bg: #5ab56a;

    background: @bg;
    color: @bg;
    opacity: 0.6;
    cursor: pointer;
    user-select: none;

    span {
      color: #fff;
    }
  }

  br-time-range {
    display: block;
    width: 100%;
  }

  br-weekly-slot {
    /**
     * We want to set the COLOR on any item we want to have a custom background color for.
     * This is because the gradient backgrounds for allowNulls rely on currentColor.
     * The text color within is set using a more specific selector
     */
    @bgColor: #2e81e1;
    background: @bgColor;
    color: @bgColor;

    user-select: none;

    &.disable {
      cursor: not-allowed;
      color: #666;
      background: #c0c0c0;
    }

    &.pending {
      background-color: rgb(200, 25, 25);
    }

    .handle {
      display: inline-block;
      flex-grow: 1;

      &.left, &.right {
        cursor: e-resize;
        min-width: 4px;
        height: 100%;
      }

      &.top, &.bottom {
        display: block;
        cursor: n-resize;
        min-height: 4px;
        width: 100%;
      }
    }

    &.disable {
      .handle {
        cursor: not-allowed;
      }
    }

    .handle {
      &.top:hover, &.bottom:hover, 
      &.left:hover, &.right:hover {
        background-color: #000;
        opacity: 0.3;
      }

      &.left {
        float: left;
      }

      &.right {
        float: right;
      }
    }

    &.active {
      font-weight: bolder;
      z-index: 10;
    }
  }
}

rr-multislider-grid {
  display: block;
  width: 100%;
  height: 100%;

  .repeat {
    display: inline-block;
    height: 100%;
  }
  
  .repeat:nth-child(even) > br-daily-grid .interval {
    background-color: @stripeColor;
  }
}

.vertical {
  br-weekly-slot,
  br-ghost-slot {
    width: 90%;
    left: 5%;
  }
}

